5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1724_2528.log
== TEST (2019-05-14 11:31:21) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
while (0>b>1):
	b = b/10
	a = a + 1
print(a)
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:31:41) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
while not(0>b>1):
	b = b/10
	a = a + 1
print(a)
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:32:01) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
while (0>b>1):
	b = b/10
	a = a + 1
print(a)
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:32:06) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
while (0>b>1):
	b = b/10
	a = a + 1
print(a)
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:32:09) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
while (0>b>1):
	b = b/10
	a = a + 1
print(a)
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:32:34) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
while not(0<b<1):
	b = b/10
	a = a + 1
print(a)
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:32:38) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
while not(0<b<1):
	b = b/10
	a = a + 1
print(a)
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:32:41) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
while not(0<b<1):
	b = b/10
	a = a + 1
print(a)
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:32:43) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
while not(0<b<1):
	b = b/10
	a = a + 1
print(a)
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:32:47) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
while not(0<b<1):
	b = b/10
	a = a + 1
print(a)
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:32:53) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
while not(0<b<1):
	b = b/10
	a = a + 1
print(a)
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:32:59) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
while not(0<b<1):
	b = b/10
	a = a + 1
print(a)
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:42:23) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
t = 0
while not(0<b<1):
	b = b/10
	a = a + 1
while (t<a):
	c = a//(10**t) - a//(10**(t+1))
	print(c)
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:43:14) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
t = 0
while not(0<b<1):
	b = b/10
	a = a + 1
while (t<a):
	c = a//(10**t) - a//(10**(t+1))
	print(c)
	t = t + 1
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:43:47) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
t = 0
while not(0<b<1):
	b = b/10
	a = a + 1
while (t<a):
	c = a//(10**t) - a//(10**(t+1))*10
	print(c)
	t = t + 1
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:46:13) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
t = 0
while not(0<b<1):
	b = b/10
	a = a + 1
while (t<a):
	c = a//(10**t) - a//(10**(t+1))*10
	print(c)
	t = t + 1
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:46:19) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
t = 0
while not(0<b<1):
	b = b/10
	a = a + 1
while (t<a):
	c = a//(10**t) - a//(10**(t+1))*10
	print(c)
	t = t + 1
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:46:25) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
t = 0
while not(0<b<1):
	b = b/10
	a = a + 1
while (t<a):
	c = a//(10**t) - a//(10**(t+1))*10
	print(c)
	t = t + 1
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:46:30) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
t = 0
while not(0<b<1):
	b = b/10
	a = a + 1
while (t<a):
	c = a//(10**t) - a//(10**(t+1))*10
	print(c)
	t = t + 1
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:46:32) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
t = 0
while not(0<b<1):
	b = b/10
	a = a + 1
while (t<a):
	c = a//(10**t) - a//(10**(t+1))*10
	print(c)
	t = t + 1
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:46:36) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
t = 0
while not(0<b<1):
	b = b/10
	a = a + 1
while (t<a):
	c = a//(10**t) - a//(10**(t+1))*10
	print(c)
	t = t + 1
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:46:37) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
t = 0
while not(0<b<1):
	b = b/10
	a = a + 1
while (t<a):
	c = a//(10**t) - a//(10**(t+1))*10
	print(c)
	t = t + 1
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:47:05) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
t = 0
while not(0<b<1):
	b = b/10
	a = a + 1
while (t<a):
	c = n//(10**t) - n//(10**(t+1))*10
	print(c)
	t = t + 1
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:47:17) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
t = 0
while not(0<b<1):
	b = b/10
	a = a + 1
while (t<a):
	c = n//(10**t) - n//(10**(t+1))*10
	print(c)
	t = t + 1
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:49:32) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
t = 0
d = 0
while not(0<b<1):
	b = b/10
	a = a + 1
while (t<a):
	c = n//(10**t) - n//(10**(t+1))*10
	d = d + c**a
	t = t + 1
print(d)
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:49:47) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
t = 0
d = 0
while not(0<b<1):
	b = b/10
	a = a + 1
while (t<a):
	c = n//(10**t) - n//(10**(t+1))*10
	d = d + c**a
	t = t + 1
print(d)
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:49:50) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
t = 0
d = 0
while not(0<b<1):
	b = b/10
	a = a + 1
while (t<a):
	c = n//(10**t) - n//(10**(t+1))*10
	d = d + c**a
	t = t + 1
print(d)
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:49:55) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
t = 0
d = 0
while not(0<b<1):
	b = b/10
	a = a + 1
while (t<a):
	c = n//(10**t) - n//(10**(t+1))*10
	d = d + c**a
	t = t + 1
print(d)
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:51:46) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
t = 0
d = 0
while not(0<b<1):
	b = b/10
	a = a + 1
while (t<a):
	c = n//(10**t) - n//(10**(t+1))*10
	d = d + c**a
	t = t + 1
if (d == n):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:51:50) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
t = 0
d = 0
while not(0<b<1):
	b = b/10
	a = a + 1
while (t<a):
	c = n//(10**t) - n//(10**(t+1))*10
	d = d + c**a
	t = t + 1
if (d == n):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:51:54) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
t = 0
d = 0
while not(0<b<1):
	b = b/10
	a = a + 1
while (t<a):
	c = n//(10**t) - n//(10**(t+1))*10
	d = d + c**a
	t = t + 1
if (d == n):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:51:57) 
-- CODE:
n = int(input("numero: "))
a = 0
b = n
t = 0
d = 0
while not(0<b<1):
	b = b/10
	a = a + 1
while (t<a):
	c = n//(10**t) - n//(10**(t+1))*10
	d = d + c**a
	t = t + 1
if (d == n):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:53:10) 
-- CODE:
n = int(input("numero: "))
while (n>=0):
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:57:34) 
-- CODE:
n = int(input("numero: "))
while (n = "a"):
	n = int(input("numero: "))
while (n>=0):
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = "a"
	else:
		print("NAO ARMSTRONG")
		n = "a"
-- ERROR:
File "XXXX", line 2
    while (n = "a"):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:57:43) 
-- CODE:
n = int(input("numero: "))
while (n == "a"):
	n = int(input("numero: "))
while (n>=0):
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = "a"
	else:
		print("NAO ARMSTRONG")
		n = "a"
-- ERROR:
File "XXXX", line 2
    while (n = "a"):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:59:11) 
-- CODE:
n = "a"
while (n>=0) or (n=="a"):
	n = int(input("numero: "))
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = "a"
	else:
		print("NAO ARMSTRONG")
		n = "a"
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    while (n>=0) or (n=="a"):
TypeError: '>=' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:59:20) 
-- CODE:
n = "a"
while (n>=0) or (n=="a"):
	n = int(input("numero: "))
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = "a"
	else:
		print("NAO ARMSTRONG")
		n = "a"
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    while (n>=0) or (n=="a"):
TypeError: '>=' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:01:00) 
-- CODE:
n = int(input("numero: "))
while (n>=0) or (n==-1000):
	n = int(input("numero: "))
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = -1000
	else:
		print("NAO ARMSTRONG")
		n = -1000
-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:01:07) 
-- CODE:
n = int(input("numero: "))
while (n>=0) or (n==-1000):
	n = int(input("numero: "))
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = -1000
	else:
		print("NAO ARMSTRONG")
		n = -1000
-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:03:16) 
-- CODE:
n = 0
while (n>=0) or (n==-1000):
	n = int(input("numero: "))
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = -1000
	else:
		print("NAO ARMSTRONG")
		n = -1000


-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:06:51) 
-- CODE:
n = 0
while (n>=0) or (n==-1000):
	n = int(input("numero: "))
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = -1000
	else:
		print("NAO ARMSTRONG")
		n = -1000


-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 12:07:08) 
-- CODE:
n = 0
while (n>=0) or (n==-1000):
	n = int(input("numero: "))
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = -1000
	else:
		print("NAO ARMSTRONG")
		n = -1000


-- EXECUTION TIME:
0.0302601
-- ERROR:
Error response from daemon: Container 10eb3cebd844e9b2952aa1da7044459dded4a46c0facc0d05d726086ad8b18f5 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:07:18) 
-- CODE:
n = 0
while (n>=0) or (n==-1000):
	n = int(input("numero: "))
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = -1000
	else:
		print("NAO ARMSTRONG")
		n = -1000


-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:12:28) 
-- CODE:
n = 0
while (n>=0) or (n==-1000):
	n = int(input("numero: "))
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = -1000
	else:
		print("NAO ARMSTRONG")
		n = -1000


-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:12:28) 
-- CODE:
n = 0
while (n>=0) or (n==-1000):
	n = int(input("numero: "))
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = -1000
	else:
		print("NAO ARMSTRONG")
		n = -1000


-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:12:28) 
-- CODE:
n = 0
while (n>=0) or (n==-1000):
	n = int(input("numero: "))
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = -1000
	else:
		print("NAO ARMSTRONG")
		n = -1000


-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:12:28) 
-- CODE:
n = 0
while (n>=0) or (n==-1000):
	n = int(input("numero: "))
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = -1000
	else:
		print("NAO ARMSTRONG")
		n = -1000


-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:12:28) 
-- CODE:
n = 0
while (n>=0) or (n==-1000):
	n = int(input("numero: "))
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = -1000
	else:
		print("NAO ARMSTRONG")
		n = -1000


-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:12:28) 
-- CODE:
n = 0
while (n>=0) or (n==-1000):
	n = int(input("numero: "))
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = -1000
	else:
		print("NAO ARMSTRONG")
		n = -1000


-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:12:28) 
-- CODE:
n = 0
while (n>=0) or (n==-1000):
	n = int(input("numero: "))
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = -1000
	else:
		print("NAO ARMSTRONG")
		n = -1000


-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:12:28) 
-- CODE:
n = 0
while (n>=0) or (n==-1000):
	n = int(input("numero: "))
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = -1000
	else:
		print("NAO ARMSTRONG")
		n = -1000


-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:12:28) 
-- CODE:
n = 0
while (n>=0) or (n==-1000):
	n = int(input("numero: "))
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = -1000
	else:
		print("NAO ARMSTRONG")
		n = -1000


-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:12:28) 
-- CODE:
n = 0
while (n>=0) or (n==-1000):
	n = int(input("numero: "))
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = -1000
	else:
		print("NAO ARMSTRONG")
		n = -1000


-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:12:28) 
-- CODE:
n = 0
while (n>=0) or (n==-1000):
	n = int(input("numero: "))
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = -1000
	else:
		print("NAO ARMSTRONG")
		n = -1000


-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:12:28) 
-- CODE:
n = 0
while (n>=0) or (n==-1000):
	n = int(input("numero: "))
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = -1000
	else:
		print("NAO ARMSTRONG")
		n = -1000


-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 12:12:29) 
-- CODE:
n = 0
while (n>=0) or (n==-1000):
	n = int(input("numero: "))
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = -1000
	else:
		print("NAO ARMSTRONG")
		n = -1000


-- EXECUTION TIME:
0.0313032
-- ERROR:
Error response from daemon: Container 10eb3cebd844e9b2952aa1da7044459dded4a46c0facc0d05d726086ad8b18f5 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:13:12) 
-- CODE:
n = 0
while (n>=0) or (n==-1000):
	n = int(input("numero: "))
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = -1000
	else:
		print("NAO ARMSTRONG")
		n = -1000


-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:13:12) 
-- CODE:
n = 0
while (n>=0) or (n==-1000):
	n = int(input("numero: "))
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = -1000
	else:
		print("NAO ARMSTRONG")
		n = -1000


-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:12:35) 
-- CODE:
n = 0
while (n>=0) or (n==-1000):
	n = int(input("numero: "))
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = -1000
	else:
		print("NAO ARMSTRONG")
		n = -1000


-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:17:51) 
-- CODE:
n = int(input("numero: "))
v1 = "ARMSTRONG"
v2 = "NAO ARMSTRONG"
if (n>0):
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")


-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:20:15) 
-- CODE:
n = int(input("numero: "))
v1 = "ARMSTRONG"
v2 = "NAO ARMSTRONG"
while (n>0) or (n == -1000):
	n = int(input("numero: "))
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = -1000.5
	else:
		print("NAO ARMSTRONG")
		n = -1000.5


-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:20:24) 
-- CODE:
n = int(input("numero: "))
v1 = "ARMSTRONG"
v2 = "NAO ARMSTRONG"
while (n>0) or (n == -1000.5):
	n = int(input("numero: "))
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = -1000.5
	else:
		print("NAO ARMSTRONG")
		n = -1000.5


-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:20:53) 
-- CODE:
n = -1000.5
v1 = "ARMSTRONG"
v2 = "NAO ARMSTRONG"
while (n>0) or (n == -1000.5):
	n = int(input("numero: "))
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = -1000.5
	else:
		print("NAO ARMSTRONG")
		n = -1000.5


-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:05:01) 
-- CODE:
n = -1000.5
v1 = "ARMSTRONG"
v2 = "NAO ARMSTRONG"
while (n>0) or (n == -1000.5):
	n = int(input("numero: "))
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = -1000.5
	else:
		print("NAO ARMSTRONG")
		n = -1000.5


-- EXECUTION TIME:
1071.02
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:06:01) 
-- CODE:
n = -1000.5
v1 = "ARMSTRONG"
v2 = "NAO ARMSTRONG"
while (n>0) or (n == -1000.5):
	n = int(input("numero: "))
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = -1000.5
	else:
		print("NAO ARMSTRONG")
		n = -1000.5


-- EXECUTION TIME:
1118.49
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:43:17) 
-- CODE:
n = -1000.5
v1 = "ARMSTRONG"
v2 = "NAO ARMSTRONG"
while (n>0) or (n == -1000.5):
	n = int(input("numero: "))
	a = 0
	b = n
	t = 0
	d = 0
	while not(0<b<1):
		b = b/10
		a = a + 1
	while (t<a):
		c = n//(10**t) - n//(10**(t+1))*10
		d = d + c**a
		t = t + 1
	if (d == n):
		print("ARMSTRONG")
		n = -1000.5
	else:
		print("NAO ARMSTRONG")
		n = -1000.5


-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
